# wasm-worker

./: Cargo.toml  LICENSE_MIT  README.md  package.json  tsconfig.json  webpack.config.js
.github/workflows/: wasm.yml
src/: chan.rs  hash.rs  hashed_file.rs  lib.rs  state.rs  utils.rs
tests/: web.rs
www/: bootstrap.ts  index.html  index.js  index.ts  worker.js  worker.ts
