[package]
name = "wasm-hasher"
version = "0.1.0"
authors = ["amiller68 <alex@banyan.computer>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "^0.2"
cfg-if = "^0.1"
console_error_panic_hook = { version = "^0.1", optional = true }
wee_alloc = { version = "^0.4", optional = true }
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
wasm-streams = { version = "^0.4" }
futures = "^0.3"
futures-util = "^0.3"
blake3 = "^1.5"
gloo-worker = { version = "^0.5", features = ["futures"] }
serde-wasm-bindgen = "^0.6"
serde = "1.0.193"

[dependencies.web-sys]
version = "^0.3"
features = [
  "File",
  "Blob",
  "ReadableStream",
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]

[unstable]
build-std = ["panic_abort", "std"]
